src/WebApp/wwwroot/css/site.css
/* ... */
/* Suppress external link icon */
footer a[target]::after, a[target].no-external-link::after {
    content: none;
}

/* Fix conflicting table border classes
-------------------------------------------------- */
.table-borderless .table-group-divider {
    border-top-width: calc(var(--bs-border-width) * 2);
}

/* Callouts
-------------------------------------------------- */
/* Adapted from the Bootstrap Docs (https://getbootstrap.com/).
  Licensed under the Creative Commons Attribution 3.0 Unported License. */

:root, [data-bs-theme="light"] {
    --callout-link: 10, 88, 202;
}

[data-bs-theme="dark"] {
    --callout-link: 110, 168, 254;
}

.callout {
    --bs-link-color-rgb: var(--callout-link);
    --callout-color: var(--bs-body-color);
    --callout-bg: var(--bs-dark-bg-subtle);
    --callout-border: var(--bs-dark-border-subtle);
    padding: 1.25rem;
    margin-top: 1.25rem;
    margin-bottom: 1.25rem;
    color: var(--callout-color, inherit);
    background-color: var(--callout-bg, var(--bs-gray-200));
    border-left: 0.25rem solid var(--callout-border, var(--bs-gray-400));
}

.callout > :last-child {
    margin-bottom: 0;
}

.callout + .callout {
    margin-top: -.25rem;
}

.callout .highlight {
    background-color: rgba(0, 0, 0, 0.05);
}

.callout-info {
    --callout-color: var(--bs-info-text-emphasis);
    --callout-bg: var(--bs-info-bg-subtle);
    --callout-border: var(--bs-info-border-subtle);
}

.callout-warning {
    --callout-color: var(--bs-warning-text-emphasis);
    --callout-bg: var(--bs-warning-bg-subtle);
    --callout-border: var(--bs-warning-border-subtle);
}

.callout-danger {
    --callout-color: var(--bs-danger-text-emphasis);
    --callout-bg: var(--bs-danger-bg-subtle);
    --callout-border: var(--bs-danger-border-subtle);
}

/* Banner for test site
-------------------------------------------------- */
.banner-test-site {
    position: fixed;
    width: 100%;
    height: 26px;
    top: 0;
    z-index: 2001;
    color: hsl(var(--base-hue), 0%, 20%);
    font-weight: 700;
    font-size: 16px;
    font-family: system-ui;
    text-transform: uppercase;
    text-align: center;
    text-shadow: 0 0 4px hsl(var(--base-hue), 0%, 100%);
    background: repeating-linear-gradient(135deg, hsl(50, 90%, 64%), hsl(50, 90%, 64%) 10px, hsl(50, 100%, 75%) 10px, hsl(50, 100%, 75%) 20px);
    box-shadow: 0 3px 7px oklch(0.65 0.13 90.74 / 0.4);
    padding: 1px 0;
}

.banner-test-site ~ header {
    padding-top: 26px;
}

[data-bs-theme="dark"] .banner-test-site {
    color: hsl(var(--base-hue), 0%, 100%);
    text-shadow: 0 0 6px hsl(var(--base-hue), 0%, 0%);
    background: repeating-linear-gradient(135deg, hsl(50, 90%, 36%), hsl(50, 90%, 36%) 10px, hsl(50, 40%, 25%) 10px, hsl(50, 40%, 25%) 20px);
    box-shadow: 0 3px 7px oklch(0.18 0.03 91.75 / 0.8);
}

/* Prevent banner from covering up link target elements. 
   See: https://www.bram.us/2020/03/01/prevent-content-from-being-hidden-underneath-a-fixed-header-by-using-scroll-margin-top/ */
:target {
    scroll-margin-top: 1.5rem;
}

/* Card with details/summary
-------------------------------------------------- */
details.card:not([open]) summary.card-header {
    border-bottom: none;
}

/* Details/Summary
-------------------------------------------------- */
summary:hover, summary:focus {
    background: hsla(0, 0%, 100%, 0.04);
}

/* Bootstrap Icons
-------------------------------------------------- */
.bi {
    width: 1rem;
    height: 1rem;
    fill: currentColor;
    vertical-align: text-bottom;
    overflow: visible !important;
}

/* Fix for Bootstrap textarea with "floating" label
-------------------------------------------------- */
.form-floating > textarea.form-control {
    height: auto;
}

/* Checkbox cursors and disabled labels
-------------------------------------------------- */
[type="checkbox"], label:has([type="checkbox"]) {
    cursor: pointer;
}

/* Use disabled attribute in addition to :disabled pseudo-class. See https://github.com/twbs/bootstrap/issues/28247 */
label:has([disabled]), label:has(:disabled) {
    cursor: default;
    opacity: .7;
}

/* Validation summary
-------------------------------------------------- */
.validation-summary-valid {
    display: none !important;
}

.validation-summary-errors ul {
    margin-bottom: 0;
}

/* Table of contents
-------------------------------------------------- */
#toc-container {
    top: 2rem;
    z-index: 999;
    /* Ensure the TOC is below the navbar menu. (Sticky-top z-index is 1020; navbar dropdown menu z-index is 1000.) */
}

/* Footer links
-------------------------------------------------- */
footer a {
    text-decoration: none;
    padding: .25rem;
    border-radius: 8px;
}

footer a:hover {
    background: hsla(0, 0%, 0%, 0.04);
}

[data-bs-theme="dark"] footer a:hover {
    background: hsla(0, 0%, 100%, 0.04);
}

/* ==================================================
Print styles
================================================== */
@media print {
    header.sticky-top {
        position: static;
    }

    .banner-test-site {
        position: static;
        text-shadow: none;
        box-shadow: none;
        border: 1px solid;
        margin-bottom: 1rem;
        background: hsl(45, 100%, 80%);
    }

    .banner-test-site::after {
        content: "— Not for public distribution";
    }
}

/* ==================================================
Additional application-specific styles
================================================== */

/* SVG icons
-------------------------------------------------- */
svg:not(:root).svg-icon {
    overflow: visible;
}

svg:not(:root) {
    overflow: hidden;
}

.svg-icon {
    display: inline-block;
    font-size: inherit;
    overflow: visible;
    vertical-align: bottom;
    width: 1.5rem;
    height: 1.5rem;
}

/* Image thumbnails
-------------------------------------------------- */
.img-thumbnail {
    max-width: 90px;
    max-height: 90px;
}
/* ... */

